# summarize

./: README.md  pyproject.toml
summarize/: main.py
